--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,9 +4,9 @@
             <a class="toggle_link noline"><i class="fa fa-close fa-lg"></i></a>
             <ul>
                 <li>
-                    <a href="{{ site.baseurl | replace: '//', '/' }}/page">Page</a>
+                    <a href="{{ site.baseurl | replace: '//', '/' }}/">Home</a>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="{{ site.baseurl | replace: '//', '/' }}/page-full">Full-Width Page</a>
                 </li>
                 <li>
@@ -21,7 +21,7 @@
                         <li><a href="/child2">child</a></li>
                         <li><a href="/child3">child</a></li>
                     </ul>
-                </li>
+                </li> -->
             </ul>
         </nav>
         <nav class="iconnav">
