Added about page, fixed some posts issues

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,13 +6,13 @@
                 <li>
                     <a href="{{ site.baseurl | replace: '//', '/' }}/">Home</a>
                 </li>
-                <!-- <li>
-                    <a href="{{ site.baseurl | replace: '//', '/' }}/page-full">Full-Width Page</a>
-                </li>
                 <li>
                     <a href="{{ site.baseurl | replace: '//', '/' }}/archive">Archive</a>
                 </li>
                 <li>
+                    <a href="{{ site.baseurl | replace: '//', '/' }}/about">About</a>
+                </li>                
+                <!-- <li>
                     <a href="{{ site.baseurl | replace: '//', '/' }}/typography">Typography</a>
                 </li>
                 <li class="parent"><a href="#">Drop Example</a>
